[package]
name = "rfmk_firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rtic = "^1.1.3"
panic-semihosting = "^0.6.0"
nrf-hal-common = { version = "^0.16.0", features = ["52840"] }
rp2040-hal = "^0.7.0"
ssd1306 = "^0.7.1"

[features]
52840 = []
