[package]
name = "rfmk_firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ARM Cortex M
cortex-m-rtic = "^1.1.3"
cortex-m-semihosting = "^0.5.0"
panic-semihosting = "^0.6.0"

# Nordic Semiconductor
nrf-hal-common = { version = "^0.16.0", features = ["52840"] }
### Nice!Nano
nrf52840-pac = "^0.12.2"

# Raspberry Pi Pico
rp2040-hal = "^0.7.0"

# OLED Display
ssd1306 = "^0.7.1"

[features]
# nrf-52840 = ["nrf-hal-common/52840"]
52840 = []
