[package]
name = "rfmk_firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ARM Cortex M
cortex-m-rtic = "^1.1.3"
cortex-m-semihosting = "^0.5.0"
panic-semihosting = "^0.6.0"

# Nordic Semiconductor
nrf-hal-common = "^0.16.0"
### Nice!Nano
nrf52840-pac = { version = "^0.12.2", optional = true }

# Raspberry Pi Pico
rp2040-hal = "^0.7.0"

# OLED Display
ssd1306 = "^0.7.1"

[features]
52840 = ["dep:nrf52840-pac", "nrf-hal-common/52840"]
